<resources>
    <string name="app_name">Swing Music</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone No</string>
    <string name="sign_up">Sign Up</string>
    <string name="aldready_have_an_account_sign_in">Aldready have an Account? Sign In</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="about_us">About Us</string>
    <string name="account">Account</string>
    <string name="library">Library</string>
    <string name="artists_for_you">Artists For You</string>
    <string name="arijit_singh">Arijit Singh</string>
    <string name="sonu_nigam">Sonu Nigam</string>
    <string name="alka_yagnik">Alka Yagnik</string>
    <string name="shreya_ghoshal">Shreya Ghoshal</string>
    <string name="lata_mangeshkar">Lata Mangeshkar</string>
    <string name="armaan_malik">Armaan Malik</string>
    <string name="kk">KK</string>
    <string name="atif_aslam">Atif Aslam</string>
    <string name="asha_bhosle">Asha Bhosle</string>
    <string name="palak_muchhal">Palak Muchhal</string>
    <string name="uditnarayan">Udit Narayan</string>
    <string name="kumarsanu">Kumar Sanu</string>
    <string name="rahatfathe">Rahat Fateh Ali</string>
    <string name="kishor_kumar">Kishor Kumar</string>
    <string name="arrehman">AR Rehman</string>
    <string name="shankarmahadevan">Shankar Mahadevan</string>
    <string name="harry_styles">Harry Styles</string>
    <string name="indian_devotional">Indian Devotional Hits</string>
    <string name="hanuman_chalisa">Hanuman Chalisa</string>
    <string name="anup_jalota">Anup Jalota</string>
    <string name="humare_saath_shri">Humare Saath Shri</string>
    <string name="agam_agarwal">Agam Aggarwal</string>
    <string name="mere_ghar_ram">Mere Ghar Ram</string>
    <string name="Jubin">Jubin</string>
    <string name="om_namah">Om Namah Shivay</string>
    <string name="ed_sheeran2">Ed Sheeran</string>

    <string name="ram_siya_ram">Jaya Kishori</string>
    <string name="levitating">Levitating</string>
    <string name="dua_lipa2">Dua Lipa</string>
    <string name="memories">Memories</string>
    <string name="maroon_5">Maroon 5</string>
    <string name="love_me_like">Love Me Like...</string>
    <string name="ellie_glouding">Ellie Glouding</string>
    <string name="love_your_self">Love Your Self</string>
    <string name="wolves">Wolves</string>
    <string name="star_boy">Star Boy</string>
    <string name="uptown_funk">Uptown Funk</string>
    <string name="something_just">Something just...</string>
    <string name="chainsmokers_coldplay">Chainsmokers, Coldplay</string>
    <string name="believer">Believer</string>
    <string name="imagine_dragons">Imagine Dragons</string>
    <string name="havana">Havana</string>
    <string name="camila_cabello">Camila Cabello</string>
    <string name="sugar">Sugar</string>
    <string name="best_hindi_picks">Best Hindi Picks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_us_text">SwingMusic is the brainchild of passionate music enthusiasts who embarked on a journey to create an innovative music platform. Developed by [Your Name] and [Your Friend\'s Name], with the assistance of advanced technology like AI, SwingMusic aims to revolutionize the way people experience music. Our vision is to provide a unique and personalized music discovery experience, crafted with dedication and fueled by our shared love for music.</string>
    <string name="user">New User</string>
    <string name="register">Register</string>

    <string name="album_art_description">Album Art</string>
    <string name="previous_button_description">Previous</string>
    <string name="play_pause_button_description">Play/Pause</string>
    <string name="next_button_description">Next</string>
    <string name="song_title">Song Title</string>
    <string name="song_artist">Artist Name</string>
    <string name="contactus">Glad to hear you Contant us at</string>
    <string name="sankat_mochan_hanuman">Sankat Mochan H..</string>
    <string name="hariharan">Hariharan</string>
    <string name="govind_bolo">Govind Bolo</string>
    <string name="suresh_wadkar">Suresh Wadkar</string>
    <string name="evergreen_bollywood">EverGreen Bollywood</string>
    <string name="gulabi_ankhe">Gulabi Ankhe</string>
    <string name="mohammad_rafi">Mohammad Rafi</string>
    <string name="baharo_phul_ba">Baharo Phul Ba..</string>
    <string name="gata_rahe_mera">Gata Rahe Mera..</string>
    <string name="ajeeb_dastan_hai">Ajeeb Dastan hai..</string>
    <string name="dekha_ek_khwab">Dekha Ek Khwab..</string>
    <string name="kabhi_kabhi_mere">Kabhi Kabhi Mere..</string>
    <string name="o_mere_dil_ke">O mere Dil ke..</string>
    <string name="kora_kagaj_tha">Kora Kagaj tha..</string>
    <string name="sudesh_bhosle">Sudesh Bhosle</string>
    <string name="adarsh_shinde">Adarsh Shinde</string>
    <string name="tula_japnar_ahe">Tula Japnar Ahe</string>
    <string name="ajay_atul">Ajay-Atul</string>
    <string name="kadhi_tu">Kadhi Tu</string>
    <string name="hrishikesh_ranade">Hrishikesh Ranade</string>
    <string name="sayli_pankaj">Sayli Pankaj</string>
    <string name="saaj_hyo_tuza">Saaj Hyo Tuza..</string>
    <string name="ketaki_mategaonkar">Ketaki Mategaonkar</string>
    <string name="sairat_zala_ji">Sairat Zala ji</string>

</resources>