<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/login_bg_3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/album_art"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/app_logo_black"
            android:layout_marginStart="8dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp">

            <TextView
                android:id="@+id/song_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/song_title" />

            <TextView
                android:id="@+id/song_artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/song_artist" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/previous_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/previous"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/previous_button_description" />

        <ImageButton
            android:id="@+id/play_pause_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_play"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/play_pause_button_description" />

        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/next"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/next_button_description" />

    </LinearLayout>



</LinearLayout>